# windots

./: .gitattributes  .gitignore  Cargo.toml  README.md  install.ps1
altsnap/: AltSnap.ini
config/fastfetch/: config.jsonc  duck.txt
config/glazewm/: config.yaml
glaze-bar/: Cargo.toml
glaze-bar/src/: main.rs
powershell/: Microsoft.PowerShell_profile.ps1
scripts/: glazewm-dwindle.ps1  rice-autostart.ps1  rice-autostart.vbs  rice-supervisor.ps1  rice-supervisor.vbs  shadowplay-record.ps1  shadowplay-record.vbs  shadowplay-save.ps1  shadowplay-wgc-save.ps1  shadowplay-wgc.vbs  wezterm-hotkey.ahk
shadowplay-wgc/: Cargo.toml
shadowplay-wgc/src/: main.rs
wezterm/: .wezterm.lua
