[package]
name = "glaze-bar"
version = "0.2.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts"] }
tungstenite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
sysinfo = "0.32"
ureq = { version = "2", features = ["json"] }
windows = { version = "0.58", features = ["Win32_Media_Audio", "Win32_System_Com", "Win32_Foundation", "Win32_Media_KernelStreaming"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
