[package]
name = "shadowplay-wgc"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-capture = "2"
# CoInitializeEx(MTA) on the finisher/maker worker threads (WinRT calls need COM).
windows = { version = "0.62", features = ["Win32_System_Com"] }

# Release profile lives at the workspace root (dev/Cargo.toml).
